Add unit test for getAllJobs service method